--- a/main.css
+++ b/main.css
@@ -5,16 +5,6 @@ body
 	color: #ddd;
 }
 
-h1
-{
-    text-align: center;
-    text-transform: uppercase;  
-    margin-top: 0px;
-    margin-bottom: 0px;
-    letter-spacing: 5px;
-    font-weight: bold;
-}
-
 #game
 {
     width: 800px;
@@ -27,10 +17,7 @@ h1
 {
     width: 600px;
     height: 600px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 10px auto 10px auto;
     border: 2px solid #1d1d1d;
     border-radius: 2px;
     position: relative;
@@ -38,10 +25,19 @@ h1
 
 #menu
 {
-    margin-top: 150px;
+    margin-top: 50px;
 }
 
-button
+#title
+{
+    font-size: 60px;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;  
+    letter-spacing: 5px;
+}
+
+.level
 {
     width: 200px;
     font-size: 20px;
@@ -58,22 +54,27 @@ button
     
 }
 
-button:hover
+.level:hover
 {
     background-color: #219bf3;
 }
 
-#reset
+#reload
 {
-    margin: 0 auto 0 auto;
-    text-transform: uppercase;
+    margin-top: 100px;
+    display: none;
 }
 
 #score
 {
-	font-size: 20px;
-	text-transform: uppercase;
-	margin-top: 10px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #fff;
+    text-transform: uppercase;
+    margin-top: 20px;
+    opacity: 0.7;
+    letter-spacing: 2px;
+    display: none;
 }
 
 .component
